# validators

./: Cargo.toml  README.md
.github/workflows/: ci-version.yml  ci.yml
src/: lib.rs  macro_validated_customized_hash_set.rs  macro_validated_customized_number.rs  macro_validated_customized_phone_number.rs  macro_validated_customized_string.rs  macro_validated_customized_vec.rs  validator_option.rs
src/base32/: mod.rs
src/base64/: mod.rs
src/base64_url/: mod.rs
src/boolean/: mod.rs
src/domain/: mod.rs
src/email/: mod.rs
src/host/: mod.rs
src/http_ftp_url/: mod.rs
src/http_url/: mod.rs
src/integer/: mod.rs
src/ipv4/: mod.rs
src/ipv6/: mod.rs
src/json/: mod.rs
src/json_array/: mod.rs
src/json_object/: mod.rs
src/line/: mod.rs
src/mac_address/: mod.rs
src/number/: mod.rs
src/phone_number/: mod.rs
tests/: macro.rs  macros.rs  rocket.rs  serde.rs
validators/: Cargo.toml  README.md
validators-derive/: Cargo.toml  README.md
validators-derive/src/: lib.rs  panic.rs  support_validators.rs  supported_validators.rs  syn_validator_options.rs  type_enum.rs
validators-derive/src/common/: allow.rs  boolean.rs  case_option.rs  flag_options.rs  length.rs  mod.rs  number.rs  range.rs  range_option.rs  rocket.rs  rocket_options.rs  separator_option.rs  serde_options.rs  test.rs  tri_allow.rs  type_enum.rs
validators-derive/src/common/attributes/: base_xx_attribute.rs  basic_attribute.rs  http_xx_url_attribute.rs  ip_xx_attribute.rs  mod.rs  range_attribute.rs  utf8_attribute.rs
validators-derive/src/validator_handlers/: base32.rs  base32_decoded.rs  base64.rs  base64_decoded.rs  base64_url.rs  base64_url_decoded.rs  boolean.rs  domain.rs  email.rs  host.rs  http_ftp_url.rs  http_url.rs  ip.rs  ipv4.rs  ipv6.rs  json.rs  length.rs  line.rs  mac_address.rs  mod.rs  number.rs  phone.rs  regex.rs  semver.rs  semver_req.rs  signed_integer.rs  text.rs  unsigned_integer.rs  url.rs  uuid.rs
validators-derive/src/validator_handlers/base32/: mod.rs
validators-derive/src/validator_handlers/base32_decoded/: mod.rs
validators-derive/src/validator_handlers/base64/: mod.rs
validators-derive/src/validator_handlers/base64_decoded/: mod.rs
validators-derive/src/validator_handlers/base64_url/: mod.rs
validators-derive/src/validator_handlers/base64_url_decoded/: mod.rs
validators-derive/src/validator_handlers/bit/: bit_attribute.rs  mod.rs
validators-derive/src/validator_handlers/boolean/: mod.rs
validators-derive/src/validator_handlers/byte/: byte_attribute.rs  mod.rs
validators-derive/src/validator_handlers/domain/: domain_attribute.rs  mod.rs
validators-derive/src/validator_handlers/email/: email_attribute.rs  mod.rs
validators-derive/src/validator_handlers/host/: host_attribute.rs  mod.rs
validators-derive/src/validator_handlers/http_ftp_url/: mod.rs
validators-derive/src/validator_handlers/http_url/: mod.rs
validators-derive/src/validator_handlers/ip/: mod.rs
validators-derive/src/validator_handlers/ipv4/: mod.rs
validators-derive/src/validator_handlers/ipv6/: mod.rs
validators-derive/src/validator_handlers/json/: mod.rs
validators-derive/src/validator_handlers/length/: length_attribute.rs  mod.rs
validators-derive/src/validator_handlers/line/: mod.rs
validators-derive/src/validator_handlers/mac_address/: mac_address_attribute.rs  mod.rs
validators-derive/src/validator_handlers/number/: mod.rs  number_attribute.rs
validators-derive/src/validator_handlers/phone/: mod.rs  phone_attribute.rs
validators-derive/src/validator_handlers/regex/: mod.rs  regex_attribute.rs
validators-derive/src/validator_handlers/semver/: mod.rs
validators-derive/src/validator_handlers/semver_req/: mod.rs
validators-derive/src/validator_handlers/signed_integer/: mod.rs
validators-derive/src/validator_handlers/text/: mod.rs
validators-derive/src/validator_handlers/unsigned_integer/: mod.rs
validators-derive/src/validator_handlers/url/: mod.rs
validators-derive/src/validator_handlers/uuid/: mod.rs  uuid_attribute.rs
validators-derive/tests/: base32.rs  base32_decoded.rs  base64.rs  base64_decoded.rs  base64_url.rs  base64_url_decoded.rs  boolean.rs  domain.rs  email.rs  host.rs  http_ftp_url.rs  http_url.rs  ip.rs  ipv4.rs  ipv6.rs  json.rs  length.rs  line.rs  mac_address.rs  number.rs  phone.rs  regex.rs  semver.rs  semver_req.rs  signed_integer.rs  text.rs  unsigned_integer.rs  url.rs  uuid.rs
validators-options/: Cargo.toml  README.md
validators-options/src/: lib.rs
validators/src/: functions.rs  lib.rs  traits.rs
validators/src/errors/: axum_traits.rs  base32.rs  base32_decoded.rs  base64.rs  base64_decoded.rs  base64_url.rs  base64_url_decoded.rs  bit.rs  boolean.rs  byte.rs  domain.rs  email.rs  host.rs  http_ftp_url.rs  http_url.rs  ip.rs  ipv4.rs  ipv6.rs  json.rs  length.rs  line.rs  mac_address.rs  mod.rs  number.rs  phone.rs  regex.rs  semver.rs  semver_req.rs  signed_integer.rs  text.rs  unsigned_integer.rs  url.rs  uuid.rs
validators/src/functions/: domain.rs  ip.rs  ipv4.rs  ipv6.rs  mod.rs
validators/src/models/: host.rs  mod.rs  protocol.rs
validators/src/result/: built_in_traits.rs  mod.rs  rocket_traits.rs  serde_traits.rs
validators/src/test/: case_option.rs  mod.rs  range_option.rs  separator_option.rs  tri_allow.rs
validators/src/traits/: collection_length.rs  mod.rs  qualify_domain.rs  to_email_string.rs  to_json_string.rs  to_mac_address_string.rs  to_uri_authority_string.rs  to_uuid_string.rs  validate_boolean.rs  validate_bytes.rs  validate_char.rs  validate_json_value.rs  validate_length.rs  validate_number.rs  validate_signed_integer.rs  validate_string.rs  validate_unsigned_integer.rs
validators/tests/: base32.rs  base32_decoded.rs  base64.rs  base64_decoded.rs  base64_url.rs  base64_url_decoded.rs  bit.rs  boolean.rs  byte.rs  domain.rs  email.rs  host.rs  http_ftp_url.rs  http_url.rs  ip.rs  ipv4.rs  ipv6.rs  json.rs  length.rs  line.rs  mac_address.rs  number.rs  phone.rs  regex.rs  semver.rs  semver_req.rs  signed_integer.rs  text.rs  unsigned_integer.rs  url.rs  uuid.rs
(+6 files in other folders)
