[package]
name = "validators"
version = "0.18.2"
authors = ["Magic Len <len@magiclen.org>"]
repository = "https://github.com/magiclen/validators"
homepage = "https://magiclen.org/validators"
keywords = ["validator", "validation", "user", "rocket", "serde"]
categories = ["value-formatting"]
description= "A library for validating user input."
readme = "README.md"
license = "MIT"

[badges]
travis-ci = { repository = "magiclen/validators", branch = "master" }
appveyor = { repository = "magiclen/validators", branch = "master", service = "github" }

[dependencies]
regex = "1.0"
number-as = "1.0"
lazy_static = "1.1"
rocket = { version = "0.3.16", optional = true }
rocket_codegen = { version = "0.3.16", optional = true }
serde = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }

[features]
nightly = []
rocketly = ["nightly", "rocket"]
rocketly-test = ["rocketly", "rocket_codegen"]
serdely = ["serde", "serde_json"]
serdely-test = ["serdely"]

[package.metadata.docs.rs]
all-features = true