[package]
name = "validators"
version = "0.20.9"
authors = ["Magic Len <len@magiclen.org>"]
repository = "https://github.com/magiclen/validators"
homepage = "https://magiclen.org/validators"
keywords = ["validator", "validation", "user", "rocket", "serde"]
categories = ["value-formatting"]
description= "A library for validating user input."
readme = "README.md"
license = "MIT"

[badges]
travis-ci = { repository = "magiclen/validators", branch = "master" }
appveyor = { repository = "magiclen/validators", branch = "master", service = "github" }

[dependencies]
regex = "1.0"
lazy_static = "1.1"
rocket = { version = "0.4", optional = true }
serde = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }
phonenumber = { version = "0.2.3+8.10.6", optional = true }

[dependencies.num-traits]
version = "0.2"
features = ["i128"]

[features]
nightly = []
rocketly = ["nightly", "rocket"]
rocketly-test = ["rocketly"]
serdely = ["serde", "serde_json"]
serdely-test = ["serdely"]
phone-number = ["phonenumber"]

[package.metadata.docs.rs]
all-features = true