[package]
name = "validators-derive"
version = "0.24.0"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2021"
repository = "https://github.com/magiclen/validators"
homepage = "https://magiclen.org/validators"
keywords = ["validator", "validation", "user", "serde", "rocket"]
categories = ["no-std", "parser-implementations", "value-formatting", "rust-patterns"]
description = "This crate provides a procedural macro to define validators with optional parameters."
readme = "README.md"
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[lib]
proc-macro = true

[dependencies]
validators-options = { version = "0.24", path = "../validators-options" }

proc-macro2 = "1"
syn = "1"
quote = "1"

educe = "0.4"
enum-ordinalize = "3.1"

phonenumber = { version = "0.3", optional = true }
regex-dep = { package = "regex", version = "1", optional = true }

[features]
std = []

base32 = []
base32_decoded = []
base64 = []
base64_decoded = []
base64_url = []
base64_url_decoded = []
boolean = []
domain = []
email = []
host = []
http_url = []
http_ftp_url = []
ip = []
ipv4 = []
ipv6 = []
json = []
length = []
line = []
mac_address = []
number = []
phone = ["std", "phonenumber"]
regex = ["regex-dep"]
semver = []
semver_req = []
signed_integer = []
text = []
unsigned_integer = []
url = []
uuid = []

serde = []
rocket = []

[package.metadata.docs.rs]
all-features = true