[package]
name = "validators-derive"
version = "0.26.0"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2024"
rust-version = "1.89"
repository = "https://github.com/magiclen/validators"
homepage = "https://magiclen.org/validators"
keywords = ["validator", "validation", "user", "serde", "rocket"]
categories = ["no-std", "parser-implementations", "value-formatting", "rust-patterns"]
description = "The provided crate offers a procedural macro for defining validators, including optional parameters."
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[lib]
proc-macro = true

[dependencies]
syn = "2.0.87"
quote = "1.0.44"
proc-macro2 = "1.0.83"

enum-ordinalize = { version = "4.4", default-features = false, features = ["derive"] }

educe = { version = "0.7", default-features = false, features = ["Debug"], optional = true }
phonenumber = { version = "0.3.10", optional = true }
regex = { version = "1.7", optional = true }

[features]
std = []
test = []
full = ["syn/full"]

base32 = []
base32_decoded = []
base64 = []
base64_decoded = []
base64_url = []
base64_url_decoded = []
bit = []
boolean = []
byte = []
domain = ["dep:educe"]
email = ["dep:educe"]
host = ["dep:educe"]
http_url = []
http_ftp_url = []
ip = ["dep:educe"]
ipv4 = ["dep:educe"]
ipv6 = ["dep:educe"]
json = []
length = []
line = []
mac_address = []
number = []
phone = ["dep:phonenumber"]
regex = ["dep:regex"]
semver = []
semver_req = []
signed_integer = []
text = []
unsigned_integer = []
url = []
uuid = []

serde = []
rocket = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]