[package]
name = "validators-options"
version = "0.21.0"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2018"
repository = "https://github.com/magiclen/validators"
homepage = "https://magiclen.org/validators"
keywords = ["validator", "validation", "user"]
categories = ["no-std", "value-formatting"]
description = "This is a library for validating and modeling user input and this crate provides options used with the `alidators-derive` crate and the `validators` crate."
readme = "README.md"
license = "MIT"
include = ["src/**/*", "Cargo.toml"]

[badges.travis-ci]
repository = "magiclen/validators"
branch = "master"

[dependencies]
enum-ordinalize = "3.1"
educe = "0.4"