[package]
name = "validators-options"
version = "0.24.0"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2021"
repository = "https://github.com/magiclen/validators"
homepage = "https://magiclen.org/validators"
keywords = ["validator", "validation", "user"]
categories = ["no-std", "value-formatting"]
description = "This crate provides options used with the `validators-derive` crate and the `validators` crate."
readme = "README.md"
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[dependencies]
enum-ordinalize = "3.1"
educe = "0.4"