[package]
name = "validators"
version = "0.23.0"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2018"
repository = "https://github.com/magiclen/validators"
homepage = "https://magiclen.org/validators"
keywords = ["validator", "validation", "user", "serde", "rocket"]
categories = ["no-std", "parser-implementations", "value-formatting"]
description = "This is a library for validating and modeling user input and this crate provides models, function, traits, errors and other dependencies used with the `validators-derive` crate."
readme = "README.md"
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[dependencies]
validators-options = { version = "0.23", path = "../validators-options" }

data-encoding = { version = "2.2", optional = true }
idna = { version = "0.2", optional = true }
serde_json = { version = "1", optional = true }
phonenumber = { version = "0.3", optional = true }
thiserror = { version = "1", optional = true }
regex-dep = { package = "regex", version = "1", optional = true }
semver-dep = { package = "semver", version = "0.11", optional = true }
url-dep = { package = "url", version = "2", optional = true }
str-utils = { version = "0.1", optional = true }

serde-dep = { package = "serde", version = "1", optional = true }
rocket-dep = { package = "rocket", git = "https://github.com/SergioBenitez/Rocket", version = "0.5.0-dev", optional = true }

[features]
std = []

base32 = []
base32_decoded = ["data-encoding"]
base64 = []
base64_decoded = ["data-encoding"]
base64_url = []
base64_url_decoded = ["data-encoding"]
boolean = []
domain = ["std", "idna"]
email = ["std", "idna"]
host = ["std", "idna"]
http_url = ["std", "url-dep", "str-utils"]
http_ftp_url = ["std", "url-dep", "str-utils"]
ip = ["std"]
ipv4 = ["std"]
ipv6 = ["std"]
json = ["serde_json"]
length = []
line = []
mac_address = []
number = []
phone = ["std", "phonenumber", "thiserror"]
regex = ["regex-dep"]
semver = ["semver-dep"]
semver_req = ["semver-dep"]
signed_integer = []
text = []
unsigned_integer = []
url = ["std", "url-dep"]
uuid = []

serde = ["serde-dep", "semver-dep/serde", "url-dep/serde"]
rocket = ["std", "rocket-dep"]

[package.metadata.docs.rs]
all-features = true