[package]
name = "validators"
version = "0.24.0"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2021"
repository = "https://github.com/magiclen/validators"
homepage = "https://magiclen.org/validators"
keywords = ["validator", "validation", "user", "serde", "rocket"]
categories = ["no-std", "parser-implementations", "value-formatting"]
description = "This is a library for validating and modeling user input and this crate provides models, function, traits, errors and other dependencies."
readme = "README.md"
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[lib]
doctest = false

[dependencies]
validators-options = { version = "0.24", path = "../validators-options" }

validators-derive = { version = "0.24", path = "../validators-derive", optional = true }

data-encoding = { version = "2.2", optional = true }
idna = { version = "0.2", optional = true }
serde_json = { version = "1", optional = true }
phonenumber = { version = "0.3", optional = true }
thiserror = { version = "1", optional = true }
regex-dep = { package = "regex", version = "1", optional = true }
semver-dep = { package = "semver", version = "1", optional = true }
url-dep = { package = "url", version = "2", optional = true }
str-utils = { version = "0.1", optional = true }

serde-dep = { package = "serde", version = "1", optional = true }
rocket-dep = { package = "rocket", version = "0.5.0-rc.1", optional = true }

[dev-dependencies]
lazy_static = "1.4"
once_cell = "1.4"

[features]
default = ["full", "derive"]

std = ["validators-derive/std"]
derive = ["validators-derive"]

full = [
    "base32",
    "base32_decoded",
    "base64",
    "base64_decoded",
    "base64_url",
    "base64_url_decoded",
    "boolean",
    "domain",
    "email",
    "host",
    "http_url",
    "http_ftp_url",
    "ip",
    "ipv4",
    "ipv6",
    "json",
    "length",
    "line",
    "mac_address",
    "number",
    "phone",
    "regex",
    "semver",
    "semver_req",
    "signed_integer",
    "text",
    "unsigned_integer",
    "url",
    "uuid",
]

base32 = ["validators-derive/base32"]
base32_decoded = ["validators-derive/base32_decoded", "data-encoding"]
base64 = ["validators-derive/base64"]
base64_decoded = ["validators-derive/base64_decoded", "data-encoding"]
base64_url = ["validators-derive/base64_url"]
base64_url_decoded = ["validators-derive/base64_url_decoded", "data-encoding"]
boolean = ["validators-derive/boolean"]
domain = ["validators-derive/domain", "std", "idna"]
email = ["validators-derive/email", "std", "idna"]
host = ["validators-derive/host", "std", "idna"]
http_url = ["validators-derive/http_url", "std", "url-dep", "str-utils"]
http_ftp_url = ["validators-derive/http_ftp_url", "std", "url-dep", "str-utils"]
ip = ["validators-derive/ip", "std"]
ipv4 = ["validators-derive/ipv4", "std"]
ipv6 = ["validators-derive/ipv6", "std"]
json = ["validators-derive/json", "serde_json"]
length = ["validators-derive/length"]
line = ["validators-derive/line"]
mac_address = ["validators-derive/mac_address"]
number = ["validators-derive/number"]
phone = ["validators-derive/phone", "std", "phonenumber", "thiserror"]
regex = ["validators-derive/regex", "regex-dep"]
semver = ["validators-derive/semver", "semver-dep"]
semver_req = ["validators-derive/semver_req", "semver-dep"]
signed_integer = ["validators-derive/signed_integer"]
text = ["validators-derive/text"]
unsigned_integer = ["validators-derive/unsigned_integer"]
url = ["validators-derive/url", "std", "url-dep"]
uuid = ["validators-derive/uuid"]

serde = ["validators-derive/serde", "serde-dep", "semver-dep/serde", "url-dep/serde"]
rocket = ["validators-derive/rocket", "std", "rocket-dep"]

[package.metadata.docs.rs]
all-features = true